k8s-manifests/prod-nginx/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-nginx
  namespace: prod-nginx
  labels:
    app: prod-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: prod-nginx
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: prod-nginx
      annotations:
        kubernetes.io/change-cause: "v2-configmap-html"
    spec:
      containers:
        - name: nginx
          image: docker.io/library/my-web:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "250m"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 2
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
          volumeMounts:
            - name: conf
              mountPath: /etc/nginx/conf.d
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: conf
          configMap:
            name: nginx-conf
        - name: html
          configMap:
            name: nginx-html
