k8s-manifests/prod-nginx/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prod-nginx
  namespace: prod-nginx
spec:
  selector:
    app: prod-nginx
  ports:
    - port: 80
      targetPort: 80
